--- a/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
@@ -1,11 +1,20 @@
 ﻿<UserControl x:Class="Launcher.Module.Document.Views.DocumentListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-           <ListBox></ListBox> 
+        <ListBox cal:Message.Attach="[Event SelectionChanged] = [Action ShowDoc]">
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+            <ListBoxItem>wqe</ListBoxItem>
+        </ListBox>
     </Grid>
 </UserControl>
