--- a/Launcher/Launcher/Views/NewLauncherView.xaml
+++ b/Launcher/Launcher/Views/NewLauncherView.xaml
@@ -24,5 +24,6 @@
         <StackPanel Background="DarkGreen" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="6"/>
         <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
         <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6" Grid.RowSpan="4" Background="WhiteSmoke"></Grid>
+        <TextBlock x:Name="NameLFO" Grid.Column="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
