--- a/Launcher/Launcher/Views/ShellView.xaml
+++ b/Launcher/Launcher/Views/ShellView.xaml
@@ -5,7 +5,7 @@
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
                       mc:Ignorable="d"
-                      
+                      Height="1280" Width="800"
                       d:DesignHeight="300" d:DesignWidth="300" WindowState="Maximized" WindowStartupLocation="CenterScreen">
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
