--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -84,6 +84,15 @@
                                     Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3"
                                     HorizontalAlignment="Stretch" Margin="1" VerticalAlignment="Stretch"
                                     CornerRadius="11" >
+                                <Border.Style>
+                                    <Style TargetType="{DynamicResource ResourceKey=}">
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="DarkGoldenrod" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
 
                                 <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1"
                                         CornerRadius="3" Background="DarkGreen">
