--- a/Launcher/Launcher/Views/ShellView.xaml
+++ b/Launcher/Launcher/Views/ShellView.xaml
@@ -7,6 +7,15 @@
                       mc:Ignorable="d"
                       Height="1280" Width="800"
                       d:DesignHeight="300" d:DesignWidth="300" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowTransitionsEnabled="false">
+    <Controls:MetroWindow.Style>
+        <Style>
+            <Setter Property="WindowChrome.WindowChrome">
+                <Setter.Value>
+                    <WindowChrome NonClientFrameEdges="None"/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Controls:MetroWindow.Style>
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
             <Button Content="About" />
