--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -246,8 +246,7 @@
         <Setter Property="Background" Value="#FF167423"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="5"/>
-        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
-        
+        <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -295,10 +294,28 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-    
-    <!--<Style x:Key="SecondListBox" TargetType="ListBox">
+
+    <!--<ListBox x:Name="Category"    Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" 
+                                     Background="{DynamicResource AccentColorBrush}" ItemContainerStyle="{DynamicResource TwoLevel}">
+        <ListBox.ItemsPanel>
+            <ItemsPanelTemplate>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            </ItemsPanelTemplate>
+        </ListBox.ItemsPanel>
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+                <ContentPresenter/>
+            </DataTemplate>
+        </ListBox.ItemTemplate>-->
+
+        <Style x:Key="SecondListBox" TargetType="ListBox">
         <Setter Property="ScrollViewer.PanningMode" Value="HorizontalOnly" />
+        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="Margin" Value="0,0,0,0"/>
+        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+        <Setter Property="Background" Value="{DynamicResource AccentColorBrush}"/>
+        <Setter Property="ItemContainerStyle" Value="{DynamicResource StyleTwoLevelListboxItem}"/>
         <Setter Property="Template">
             <Setter.Value>
         <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{DynamicResource AccentColorBrush}">
@@ -307,8 +324,9 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
+            </ListBox>
              
-            --><!-- Сюда будут добавляться Item'ы --><!--
+            <!-- Сюда будут добавляться Item'ы --><!--
             <ListBoxItem  FontFamily="22" Foreground="White" >
                 <ContentPresenter />
             </ListBoxItem>
@@ -333,10 +351,10 @@
             <ListBoxItem Template="{DynamicResource TwoLevel}" FontFamily="22" Foreground="White" >
                 <ContentPresenter/>
             </ListBoxItem>
-        </ListBox>
+        </ListBox>-->
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
 
     <!-- ХЗ что снизу серьёзно ..-->
 
@@ -402,7 +420,8 @@
             </Setter.Value>
         </Setter>   
     </Style>-->
-    <Style x:Key="TwoLevel" TargetType="{x:Type ListBoxItem}">   
+                
+    <Style x:Key="StyleTwoLevelListboxItem" TargetType="{x:Type ListBoxItem}">   
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
@@ -418,7 +437,7 @@
                             <RowDefinition></RowDefinition>
                         </Grid.RowDefinitions>
                         <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" FontSize="22" Background="#FF167423" Foreground="White">
-
+                            <ContentPresenter/>
 
                             <!--<Button.Style>
                     <Style>
